# libraytracer

./: CMakeLists.txt  README.md
cmake/: raytracer_config.cmake.in
include/raytracer/: array_2d.h  color3.h  grid.h  helloworld.h  math_tools.h  tuple.h  vec3.h  vec4.h
src/: color3.cpp  helloworld.cpp  tuple.cpp
test/: CMakeLists.txt
test/src/: array_2d_test.cpp  color3_test.cpp  example_test.cpp  grid_test.cpp  tuple_test.cpp  vec3_test.cpp  vec4_test.cpp
